actually commiting the 'Panda Power' font changes, now...

--- a/artist.html
+++ b/artist.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="col-md-4">
-      <p class="steely1">Hip-Hop Literati</p>
+      <p class="steely bigType">Hip-Hop Literati</p>
     </div>
 
   </div>
