--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
       <!-- <p class="text-center"> Hip-Hop Literati</p> -->
     </div>
 
+    <br>
+
     <div class="col-md-8">
-      <p class="text-center"> Hip-Hop Literati</p>
+      <p class="steely bigType"> Hip-Hop Literati</p>
     </div>
 
     <div class="col-md-2">
