--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     </div>
 
     <div class="col-md-4" id="loginRegister">
-      <p>(login/register widget - when visible)</p>
+      <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+    (login/register widget - when visible)</button>
     </div>
 
   </div>
