--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
     </div>
 
     <div class="col-md-4" id="loginRegister">
-      <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+      <button class="btn btn-primary" id="theModalButton" data-toggle="modal" data-target="#myModal">
     (login/register widget - when visible)</button>
     </div>
 
   </div>
+
+  <br>
 
   <div class="row">
 
@@ -64,6 +66,8 @@
     </div>
 
   </div>
+
+  <br>
 
   <div class="row">
     <p></p>
