--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
 
   </div>
 
-  <br>
-
   <div class="row">
     <p></p>
   </div>
@@ -109,30 +107,30 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     ×</button>
                 <h4 class="modal-title" id="myModalLabel">
-                    Login/Registration - <a href="http://www.google.com</a></h4>
+                    <a href="http://www.google.com</a></h4>
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-md-8" style="border-right: 1px dotted #C2C2C2;padding-right: 30px;">
+                    <div class="col-md-8">
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs">
-                            <li class="active"><a href="#Login" data-toggle="tab">Login</a></li>
-                            <li><a href="#Registration" data-toggle="tab">Registration</a></li>
+                            <li class="active"><a href="#Login" data-toggle="tab">login/</a></li>
+                            <li><a href="#Registration" data-toggle="tab">registration</a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content">
                             <div class="tab-pane active" id="Login">
                                 <form role="form" class="form-horizontal">
                                 <div class="form-group">
-                                    <label for="email" class="col-sm-2 control-label">
-                                        Email</label>
+                                    <label for="email" class="col-sm-3 control-label">
+                                        e-mail</label>
                                     <div class="col-sm-10">
                                         <input type="email" class="form-control" id="email1" placeholder="Email" />
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="exampleInputPassword1" class="col-sm-2 control-label">
-                                        Password</label>
+                                    <label for="exampleInputPassword1" class="col-sm-3 control-label">
+                                        password</label>
                                     <div class="col-sm-10">
                                         <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email" />
                                     </div>
@@ -202,10 +200,6 @@
                                 </form>
                             </div>
                         </div>
-                        <div id="OR" class="hidden-xs">
-                            OR</div>
-                    </div>
-
 
 </body>
 
