--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
     aria-hidden="true">
-    <div class="modal-dialog modal-md">
+    <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
@@ -123,7 +123,7 @@
                                 <form role="form" class="form-horizontal">
                                 <div class="form-group">
                                     <label for="email" class="col-sm-3 control-label">
-                                        e-mail</label>
+                                        user ID</label>
                                     <div class="col-sm-10">
                                         <input type="email" class="form-control" id="email1" placeholder="Email" />
                                     </div>
@@ -141,7 +141,6 @@
                                     <div class="col-sm-10">
                                         <button type="submit" class="btn btn-primary btn-sm">
                                             Submit</button>
-                                        <a href="javascript:;">Forgot your password?</a>
                                     </div>
                                 </div>
                                 </form>
