minor changes to index.html, artist.html

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </div>
 
     <div class="col-md-4" id="loginRegister">
-      <button class="btn btn-primary" id="theModalButton" data-toggle="modal" data-target="#myModal">
-    (login/register widget - when visible)</button>
+      <button class="btn btn-primary-invis" id="theModalButton" data-toggle="modal" data-target="#myModal">
+    <p class="whiteText">(login/register widget - when visible)</p></button>
     </div>
 
   </div>
