--- a/artist.html
+++ b/artist.html
@@ -4,7 +4,7 @@
 
   <meta charset="utf-8">
 
-  <title>Rap Literati</title>
+  <title>Hip-Hop Literati</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -69,7 +69,7 @@
     </div>
 
     <div class="col-md-4">
-      <p class="steely bigType">Hip-Hop Literati</p>
+      <h1 class="steely">Hip-Hop Literati</h1>
     </div>
 
   </div>
