'handlebars' changes, with stuff rom Trey

--- a/artist.html
+++ b/artist.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="col-md-4">
-      <h1 class="steely">Hip-Hop Literati</h1>
+      <p class="steely biggishType">Hip-Hop Literati</p>
     </div>
 
   </div>
