--- a/index.html
+++ b/index.html
@@ -107,32 +107,31 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     ×</button>
                 <h4 class="modal-title" id="myModalLabel">
-                    <a href="http://www.google.com</a></h4>
+                    <a href="http://www.google.com</a>
             </div>
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-8">
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs">
-                            <li class="active"><a href="#Login" data-toggle="tab">login/</a></li>
-                            <li><a href="#Registration" data-toggle="tab">registration</a></li>
+                            <li class="active"><a href="#Login" data-toggle="tab">login/register</a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content">
                             <div class="tab-pane active" id="Login">
                                 <form role="form" class="form-horizontal">
                                 <div class="form-group">
-                                    <label for="email" class="col-sm-3 control-label">
-                                        user ID</label>
-                                    <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="email1" placeholder="Email" />
+                                    <label for="email" class="col-sm-8 control-label">
+                                        user_ID</label>
+                                    <div class="col-sm-12">
+                                        <input type="email" class="form-control" id="email1" placeholder="e-mail" />
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputPassword1" class="col-sm-3 control-label">
                                         password</label>
-                                    <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email" />
+                                    <div class="col-sm-12">
+                                        <input type="email" class="form-control" id="exampleInputPassword1" placeholder="password" />
                                     </div>
                                 </div>
                                 <div class="row">
