added temporary directory with autocomplete sample code

--- a/index.html
+++ b/index.html
@@ -87,6 +87,22 @@
 
   			<input class="form-control form-control-lg" type="text" placeholder=" (choose a rap artist for analysis) " id="rapper-input"> <br>
 
+        <div class="ui-widget">
+            <label>rap artist: </label>
+            <select id="combobox">
+                <option></option>
+                <option value="A">A</option>
+                <option value="B">B</option>
+                <option value="C">C</option>
+                <option value="C">C</option>
+                <option value="D">D</option>
+                <option value="E">E</option>
+                <option value="F">F</option>
+                <option value="G">G</option>
+                <option value="H">H</option>
+          </select>
+        </div>
+
         <!-- <input class="form-control form-control-lg" type="text" placeholder="rap artist for analysis" id="rapper-input"> <br>
 
         <input class="form-control form-control-lg" type="text" placeholder="rap artist for analysis" id="rapper-input"> <br> -->
