added note to self about how to better go about the autocomplete functionality

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--  (note to self - will be using TypeAhead for the autocomplete stuff) -->
+
 <!DOCTYPE html>
 
 <head>
@@ -86,6 +88,8 @@
   		<div class="col-md-4" id="rapper-search">
 
   			<input class="form-control form-control-lg" type="text" placeholder=" (choose a rap artist for analysis) " id="rapper-input"> <br>
+
+<!--  (note to self - will be using TypeAhead for this next bit, for the autocomplete functionality) -->
 
         <div class="ui-widget">
             <label>rap artist: </label>
