re-named primary style document style.css (had been stylex.css)

--- a/artist.html
+++ b/artist.html
@@ -12,7 +12,7 @@
 
   <!-- <link href="https://fonts.googleapis.com/css?family=Redressed" rel="stylesheet"> -->
 
-  <link rel="stylesheet" type="text/css" href="assets/css/stylex.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
   <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 
