now the autocomplete functionality is there, and the page no longer looks terribly 'busted'... yay

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--  (note to self - will be using TypeAhead for the autocomplete stuff) -->
+ (note to self - will be using TypeAhead for the autocomplete stuff) -->
 
 <!DOCTYPE html>
 
@@ -8,17 +8,18 @@
 
   <title>Hip-Hop Literati</title>
 
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
   <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
+  <script src="./assets/javascript/jquery-3.3.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
   <script type="text/javascript" src="assets/javascript/main.js"></script>
   <!-- <script src="./assets/javascript/bootstrap-typeahead.js"></script> -->
-  <script src="./assets/javascript/jquery-3.3.1.min.js"></script>
+  
   <script  type="text/javascript" src="./assets/javascript/typeahead.bundle.min.js"></script>
 
 </head>
@@ -96,13 +97,13 @@
 
 <!--  (note to self - will be using TypeAhead for this next bit, for the autocomplete functionality) -->
 
-        <div style="margin: 50px 50px">
+<!--         <div style="margin: 50px 50px">
             <label for="artist_search">artist search: </label>
             <input id="artist_search" type="text" data-provide="typeahead"
                data-source='["Eminem", "KRS One", "MC Lyte"]'>
-        </div>
+        </div> -->
 
-        <div class="ui-widget">
+<!--         <div class="ui-widget">
             <label>rap artist: </label>
             <select id="combobox">
                 <option></option>
@@ -116,7 +117,7 @@
                 <option value="G">G</option>
                 <option value="H">H</option>
           </select>
-        </div>
+        </div> -->
 
         <!-- <input class="form-control form-control-lg" type="text" placeholder="rap artist for analysis" id="rapper-input"> <br>
 
@@ -233,13 +234,13 @@
 <script type="text/javascript">
 $(document).ready(function(){
     // Defining the local dataset
-    var cars = ['Audi', 'BMW', 'Bugatti', 'Ferrari', 'Ford', 'Lamborghini', 'Mercedes Benz', 'Porsche', 'Rolls-Royce', 'Volkswagen', "MungoJerry", "SRS", "zTEST"];
+    var artistsComplete = ['Eminem', 'KRS One', 'MC Lyte'];
     
     // Constructing the suggestion engine
-    var cars = new Bloodhound({
+    var artistsComplete = new Bloodhound({
         datumTokenizer: Bloodhound.tokenizers.whitespace,
         queryTokenizer: Bloodhound.tokenizers.whitespace,
-        local: cars
+        local: artistsComplete
     });
     
     // Initializing the typeahead
@@ -249,8 +250,8 @@ $(document).ready(function(){
         minLength: 1 /* Specify minimum characters required for showing result */
     },
     {
-        name: 'cars',
-        source: cars
+        name: 'artistsComplete',
+        source: artistsComplete
     });
 });  
 </script>
@@ -260,4 +261,4 @@ $(document).ready(function(){
 </html>
 
 
-<!-- ALL HAIL THE CHECKING-FOR-LATEST-CHANGES TEXT -->
+<!-- ALL HAIL THE CHECKING-FOR-LATEST-CHANGES TEXT
