full 'alphabet' of things for autocomplete to render

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <script type="text/javascript">
 $(document).ready(function(){
     // Defining the local dataset
-    var artistsComplete = ['Eminem', 'KRS One', 'MC Lyte'];
+    var artistsComplete = ['Aaa', 'Bbb', 'Ccc', 'Ddd', 'Eminem', 'Fff', 'Ggg', 'Hhh', 'Iii', 'Jjj', 'KRS One', 'Lll', 'MC Lyte', 'Nnn', 'Ooo', 'Ppp', 'Qqq', 'Rrr', 'Slick Rick', 'Ttt', 'Uuu', 'Vvv', 'Wyclef', 'Xxx', 'Yyy', 'Zzz',];
     
     // Constructing the suggestion engine
     var artistsComplete = new Bloodhound({
