--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
 <body>
 
-<!--Motion Background-->
+<!--video background loop-->
 	<video autoplay muted loop id="ourVideo">
 
 		<source src="assets/images/audienceBacker.mp4" type="video/mp4">
 
 	</video>
 
-<!--front page-->
+<!--main page-->
 <div class="container" id="frontpage">
 
   <div class="row">
@@ -91,37 +91,7 @@
 
   		<div class="col-md-4" id="rapper-search">
 
-<!--   			<input class="form-control form-control-lg" type="text" placeholder=" (choose a rap artist for analysis) " id="rapper-input"> <br> -->
-
         <input type="text" class="typeahead tt-query" autocomplete="off" spellcheck="false">
-
-<!--  (note to self - will be using TypeAhead for this next bit, for the autocomplete functionality) -->
-
-<!--         <div style="margin: 50px 50px">
-            <label for="artist_search">artist search: </label>
-            <input id="artist_search" type="text" data-provide="typeahead"
-               data-source='["Eminem", "KRS One", "MC Lyte"]'>
-        </div> -->
-
-<!--         <div class="ui-widget">
-            <label>rap artist: </label>
-            <select id="combobox">
-                <option></option>
-                <option value="A">A</option>
-                <option value="B">B</option>
-                <option value="C">C</option>
-                <option value="C">C</option>
-                <option value="D">D</option>
-                <option value="E">E</option>
-                <option value="F">F</option>
-                <option value="G">G</option>
-                <option value="H">H</option>
-          </select>
-        </div> -->
-
-        <!-- <input class="form-control form-control-lg" type="text" placeholder="rap artist for analysis" id="rapper-input"> <br>
-
-        <input class="form-control form-control-lg" type="text" placeholder="rap artist for analysis" id="rapper-input"> <br> -->
 
   			<button type="button" class="btn btn-success" id="findRapStats">Get my lyrical STATS!</button>
 
@@ -145,8 +115,8 @@
                 <div class="row">
                     <div class="col-md-8">
                         <!-- Nav tabs -->
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a href="#Login" data-toggle="tab">login/register</a></li>
+                        <ul class="nav">
+                            <li class="active"><a href="#Login">login/register</a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content">
@@ -233,17 +203,17 @@
 
 <script type="text/javascript">
 $(document).ready(function(){
-    // Defining the local dataset
+    // local dataset
     var artistsComplete = ['Aaa', 'Bbb', 'Ccc', 'Ddd', 'Eminem', 'Fff', 'Ggg', 'Hhh', 'Iii', 'Jjj', 'KRS One', 'Lll', 'MC Lyte', 'Nnn', 'Ooo', 'Ppp', 'Qqq', 'Rrr', 'Slick Rick', 'Ttt', 'Uuu', 'Vvv', 'Wyclef', 'Xxx', 'Yyy', 'Zzz',];
     
-    // Constructing the suggestion engine
+    // suggestion engine
     var artistsComplete = new Bloodhound({
         datumTokenizer: Bloodhound.tokenizers.whitespace,
         queryTokenizer: Bloodhound.tokenizers.whitespace,
         local: artistsComplete
     });
     
-    // Initializing the typeahead
+    // typeahead
     $('.typeahead').typeahead({
         hint: true,
         highlight: true, /* Enable substring highlighting */
@@ -259,6 +229,3 @@ $(document).ready(function(){
 </body>
 
 </html>
-
-
-<!-- ALL HAIL THE CHECKING-FOR-LATEST-CHANGES TEXT
