closer to proper handlebars additions

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
- (note to self - will be using TypeAhead for the autocomplete stuff) -->
 
 <!DOCTYPE html>
 
@@ -39,7 +38,7 @@
   <div class="row">
     
     <div class="col-md-4" id="userID">
-      <p>(UserID signifier - when visible)</p>
+      <p class="invis">(UserID signifier - when visible)</p>
     </div>
 
     <div class="col-md-4">
@@ -47,7 +46,7 @@
     </div>
 
     <div class="col-md-4" id="loginRegister">
-      <button class="btn btn-primary-invis" id="theModalButton" data-toggle="modal" data-target="#myModal">
+      <button class="btn invis" id="theModalButton" data-toggle="modal" data-target="#myModal">
     <p class="whiteText">(login/register widget - when visible)</p></button>
     </div>
 
@@ -124,7 +123,7 @@
                                 <form role="form" class="form-horizontal">
                                 <div class="form-group">
                                     <label for="email" class="col-sm-8 control-label">
-                                        user_ID</label>
+                                        userID</label>
                                     <div class="col-sm-12">
                                         <input type="email" class="form-control" id="email1" placeholder="e-mail" />
                                     </div>
