--- a/artist.html
+++ b/artist.html
@@ -19,9 +19,6 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/javascript/main.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 
 </head>
 
@@ -65,13 +62,13 @@
 
       <div class="col-md-8">
       
-        <p id="nameRendered, bigName"> Artist Name - IN BIG TYPE </p>
+        <p id="bigName"> Artist Name - IN BIG TYPE </p>
 
       </div>
 
   </div>
 
-  <br>
+<!--   <br>
 
   <br>
 
@@ -79,24 +76,14 @@
 
   <br>
 
-  <br>
+  <br> -->
 <!-- 
   <br>
 
   <br> -->
   <div id="statsRendered">
 
-    artist: 
-    
-    # of unique words found:
-
-    # of songs:
-
-    words per song:
-
-    unique words per song:
-
-    percent unique:
+    placeholder text
 
   </div>
 
@@ -113,9 +100,13 @@
       <h3>unique words per song: {{{uniqueWordsPerSong}}} </h3>
 
       <h3>percent unique: {{{ percentUnique}}} </h3>
+    </div>
 
   </script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="assets/javascript/main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 
 </body>
 
