--- a/artist.html
+++ b/artist.html
@@ -89,23 +89,23 @@
 
   <script id="statsTemplate" type="text/x-handlebars-template">
     <div>
-      <h3> artist: {{{artist}}} </h3>
+      <h4> artist: {{{artist}}} </h3>
     
-      <h3># of unique words found: {{{uniqueWords}}} </h3>
+      <h4># of unique words found: {{{uniqueWords}}} </h3>
 
-      <h3># of songs: {{{numOfSongs}}} </h3>
+      <h4># of songs: {{{numOfSongs}}} </h3>
 
-      <h3>words per song: {{{wordsPerSong}}} </h3>
+      <h4>words per song: {{{wordsPerSong}}} </h3>
 
-      <h3>unique words per song: {{{uniqueWordsPerSong}}} </h3>
+      <h4>unique words per song: {{{uniqueWordsPerSong}}} </h3>
 
-      <h3>percent unique: {{{ percentUnique}}} </h3>
+      <h4>percent unique: {{{ percentUnique}}} </h3>
     </div>
 
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/javascript/main.js"></script>
+  <script type="text/javascript" src="./assets/javascript/main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 
 </body>
