--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <head>
@@ -9,17 +8,17 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 
   <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
-  <script src="./assets/javascript/jquery-3.3.1.min.js"></script>
+  <script src="../assets/javascript/jquery-3.3.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-  <script type="text/javascript" src="assets/javascript/main.js"></script>
+  <script type="text/javascript" src="../assets/javascript/main.js"></script>
   <!-- <script src="./assets/javascript/bootstrap-typeahead.js"></script> -->
   
-  <script  type="text/javascript" src="./assets/javascript/typeahead.bundle.min.js"></script>
+  <script  type="text/javascript" src="../assets/javascript/typeahead.bundle.min.js"></script>
 
 
 
@@ -40,7 +39,7 @@
   <div class="row">
     
     <div class="col-md-4" id="userID">
-      <p class="invis">(UserID signifier - when visible)</p>
+      <!-- <p class="invis">(UserID signifier - when visible)</p> -->
     </div>
 
     <div class="col-md-4">
@@ -90,7 +89,7 @@
 
 	<div class="row">
 
-  		<div class="col-md-4" id="searchDiv">
+  		<div class="col-md-4">
 
         <input type="text" class="typeahead tt-query" id="rapper-search" autocomplete="off" spellcheck="false">
 
@@ -227,7 +226,7 @@ $(document).ready(function(){
 });  
 </script>
 
-<!-- <script>
+<script>
   $("#findRapStats").on("click", function(event) {
      event.preventDefault();
 
@@ -237,8 +236,8 @@ $(document).ready(function(){
      
      };
 
-     $.get("/api/all", artistData)
-</script> -->
+     $.get("/api/all", artistData
+</script>
 
 </body>
 
