added modalClick scripts near end of index.html

--- a/public/artist.html
+++ b/public/artist.html
@@ -27,7 +27,7 @@
 <!--Motion Background-->
 	<video autoplay muted loop id="ourVideo">
 
-		<source src="assets/images/audienceBacker.mp4" type="video/mp4">
+		<source src="../assets/images/audienceBacker.mp4" type="video/mp4">
 
 	</video>
 
@@ -56,7 +56,7 @@
 
       <div class="col-md-4">
       
-        <img src="./assets/images/exampleImg.jpg" alt="artistName" id="artistImage">
+        <img src="../assets/images/exampleImg.jpg" alt="artistName" id="artistImage">
 
       </div>
 
