--- a/publicDocsAlt/index.html
+++ b/publicDocsAlt/index.html
@@ -227,7 +227,7 @@ $(document).ready(function(){
 });  
 </script>
 
-<!-- <script>
+<script>
   $("#findRapStats").on("click", function(event) {
      event.preventDefault();
 
@@ -238,7 +238,7 @@ $(document).ready(function(){
      };
 
      $.get("/api/all", artistData)
-</script> -->
+</script>
 
 </body>
 
